Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,12 @@
       <title>Clara Bastos</title>
   </head>
   <body>
-    <p>Hi there!</p>
-    <p>It works!</p>
+    <div><h1>Clara Bastos</h1></div>
+    {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaks }}</p>
+    {% endfor %}
   </body>
 </html>
